<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/workouts"
            android:icon="@drawable/ic_gym"
            android:title="@string/workout"
            app:iconTint="#6D6D6D"
            />
        <item
            android:id="@+id/meals"
            android:icon="@drawable/ic_dinner"
            android:title="@string/meals"
            app:iconTint="#6D6D6D"
            />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/profile" />
    </group>
</menu>