<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/mainCard"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_margin="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toTopOf="@id/headingcat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cornered_bg"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/todaysdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="Tuesday,20 July"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hello, User"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/todaysdate"
                    app:layout_constraintTop_toBottomOf="@id/todaysdate" />

                <ImageView
                    android:id="@+id/profile"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_person_bih"
                    app:layout_constraintBottom_toBottomOf="@id/username"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/todaysdate" />


                <com.budiyev.android.circularprogressbar.CircularProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    app:animateProgress="true"
                    app:backgroundStrokeColor="#663F51B5"
                    app:backgroundStrokeWidth="16dp"
                    app:drawBackgroundStroke="true"
                    app:foregroundStrokeCap="butt"
                    app:foregroundStrokeWidth="16dp"
                    app:indeterminate="false"
                    app:indeterminateMinimumAngle="45"
                    app:indeterminateRotationAnimationDuration="120"
                    app:indeterminateSweepAnimationDuration="600"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/workout_time"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/username"
                    app:maximum="100"
                    app:progress="65"
                    app:progressAnimationDuration="100"
                    app:startAngle="270" />

                <TextView
                    android:id="@+id/percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_52"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/progress_bar"
                    app:layout_constraintEnd_toEndOf="@id/progress_bar"
                    app:layout_constraintStart_toStartOf="@id/progress_bar"
                    app:layout_constraintTop_toTopOf="@id/progress_bar" />


                <com.budiyev.android.circularprogressbar.CircularProgressBar
                    android:id="@+id/workout_time"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="12dp"
                    app:animateProgress="true"
                    app:backgroundStrokeColor="#663F51B5"
                    app:backgroundStrokeWidth="16dp"
                    app:drawBackgroundStroke="true"
                    app:foregroundStrokeCap="butt"
                    app:foregroundStrokeWidth="16dp"
                    app:indeterminate="false"
                    app:indeterminateMinimumAngle="45"
                    app:indeterminateRotationAnimationDuration="120"
                    app:indeterminateSweepAnimationDuration="600"
                    app:layout_constraintBottom_toBottomOf="@id/progress_bar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/progress_bar"
                    app:layout_constraintTop_toTopOf="@id/progress_bar"
                    app:maximum="100"
                    app:progress="75"
                    app:progressAnimationDuration="100"
                    app:startAngle="270" />

                <TextView
                    android:id="@+id/time_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_01_30_nworkout_left"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/workout_time"
                    app:layout_constraintEnd_toEndOf="@id/workout_time"
                    app:layout_constraintStart_toStartOf="@id/workout_time"
                    app:layout_constraintTop_toTopOf="@id/workout_time" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/headingcat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/todays_meals"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/mainCard"
            app:layout_constraintTop_toBottomOf="@id/mainCard" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMeals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@id/mainCard"
            app:layout_constraintStart_toStartOf="@id/headingcat"
            app:layout_constraintTop_toBottomOf="@id/headingcat"
            tools:listitem="@layout/item_home_meals" />


        <androidx.cardview.widget.CardView
            android:id="@+id/workoutcard"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_margin="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvMeals">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/theme_bg_1">

                <TextView
                    android:id="@+id/workout_headinh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:paddingLeft="4dp"
                    android:paddingTop="4dp"
                    android:text="@string/todaysworkout"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/todaysworkout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/upperbody"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/workout_headinh" />


                <androidx.cardview.widget.CardView
                    android:id="@+id/chest"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    app:cardBackgroundColor="@color/card_bg"
                    app:cardCornerRadius="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/todaysworkout">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_chest" />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/back"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:cardBackgroundColor="@color/card_bg"
                    app:cardCornerRadius="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/biceps"
                    app:layout_constraintStart_toEndOf="@id/chest"
                    app:layout_constraintTop_toBottomOf="@id/todaysworkout">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_back_" />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/biceps"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:cardBackgroundColor="@color/card_bg"
                    app:cardCornerRadius="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/legs"
                    app:layout_constraintStart_toEndOf="@id/back"
                    app:layout_constraintTop_toBottomOf="@id/todaysworkout">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_biceps" />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/legs"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:cardBackgroundColor="@color/card_bg"
                    app:cardCornerRadius="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/biceps"
                    app:layout_constraintTop_toBottomOf="@id/todaysworkout">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_legs" />


                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>